--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -14,6 +14,7 @@ html {
 header {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     color: rgb(41, 133, 36);
 }
@@ -40,12 +41,14 @@ header div {
 #bars {
     margin-left: auto;
     cursor: pointer;
+    width: 20pt;
+    height: 20pt;
 }
 
 #logo_usuario {
     padding: 3%;
-    width: 100%;
-    height: 100%;
+    width: 9vh;
+    height: 9vh;
     border-radius: 50%;
 }
 
@@ -53,13 +56,38 @@ header div {
     display: flex;
 }
 
-#menu_cabecera {
+#cabecera_lista {
     display: none;
+    order: 5;
+    flex: 100%;
+    background-color: green;
+}
+
+#menu_cabecera {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
+#menu_cabecera div {
+    margin: 2%;
+    padding: 3%;
+    border-bottom: 1px solid white;
+}
+
+#menu_cabecera a {
+    margin: 0 auto;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-size: larger;
 }
 
 
 /*
-
+#menu_cabecera {
+    display: none;
+}
 header {
     display: flex;
     flex-direction: row;
