--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -239,6 +239,30 @@ div>label {
     border-radius: 6px;
 }
 
+#contenido {
+    display: flex;
+    flex-direction: column;
+    padding: 4%;
+    text-align: center;
+}
+
+.contenido_landing {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 5%;
+}
+
+.contenido_landing h2 {
+    margin: 0;
+    color: green;
+}
+
+.contenido_landing p {
+    text-align: justify;
+    padding: 4%;
+}
+
 
 /*
 #menu_cabecera {
