--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -263,6 +263,14 @@ div>label {
     padding: 4%;
 }
 
+footer {
+    border-top: 1px solid black;
+    background-color: #78ed99;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 
 /*
 #menu_cabecera {
