Adapta cabecera a versión tablet

--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -306,6 +306,22 @@ footer {
 }
 
 
+/*-----------------------------------VERSIÓN TABLET----------------------------------------*/
+
+@media all and (min-width: 700px) and (max-width: 1000px) {
+    #contenedor_foto_perfil a {
+        margin: 0 auto;
+    }
+    #bars {
+        width: 30pt;
+        height: 30pt;
+    }
+    #menu_cabecera div {
+        margin: 0;
+    }
+}
+
+
 /*
 #menu_cabecera {
     display: none;
