--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -460,6 +460,41 @@ footer {
     #btn_filtrar {
         padding: 8%;
     }
+    #contenido {
+        flex-direction: row;
+        padding-top: 1%;
+    }
+    .contenido_landing {
+        margin-top: 2%;
+    }
+    .contenido_landing p {
+        margin-top: 0%;
+    }
+    footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 1%;
+        padding-top: 2%;
+    }
+    #container_derechos {
+        width: 100%;
+    }
+    #logo_footer {
+        width: 20%;
+    }
+    #direcciones_footer {
+        width: 70%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .enlace_footer {
+        width: 30%;
+        margin: 1% 0%;
+    }
+    #redes_sociales_footer {
+        width: 10%;
+    }
 }
 
 
