--- a/css/usuario.css
+++ b/css/usuario.css
@@ -191,6 +191,11 @@ header div {
     width: 7%;
 }
 
+#valoraciones_usu {
+    height: 60vh;
+    overflow: scroll;
+}
+
 footer {
     border-top: 1px solid black;
     background-color: #78ed99;
@@ -265,6 +270,10 @@ footer {
     .comentario_valor {
         padding: 1%;
     }
+    #valoraciones_usu {
+        height: 60vh;
+        overflow: scroll;
+    }
     footer {
         flex-direction: row;
         flex-wrap: wrap;
@@ -333,9 +342,45 @@ footer {
     #nombre_empresa {
         flex: 20%;
     }
-    #contenido {
-        flex-direction: column;
-        padding-top: 1%;
+    #container_usuario {
+        flex-direction: row;
+    }
+    #datos_usuario,
+    #valoraciones {
+        width: 50%;
+    }
+    #nombre_usu h3 {
+        font-weight: 800;
+        font-size: 1.4em;
+    }
+    #foto_usu {
+        padding: 4%;
+    }
+    #desc_usu {
+        margin-top: 0;
+    }
+    #menu_usu {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+    }
+    .btn_menu {
+        width: 30%;
+        margin: auto;
+    }
+    #valoraciones {
+        margin-left: 1%;
+    }
+    .valoracion {
+        width: 60%;
+        margin: 2% auto;
+    }
+    .estrellas_valor img {
+        width: 5%;
+    }
+    #valoraciones_usu {
+        height: 100vh;
+        overflow: scroll;
     }
     footer {
         flex-direction: row;
