--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -246,6 +246,24 @@ div>label {
     text-align: center;
 }
 
+.btn_solicitud_iniciar {
+    margin: 4%;
+}
+
+.btn_solicitud_iniciar {
+    width: 80%;
+    padding: 2%;
+    background: green;
+    font-size: 1em;
+    border: none;
+    color: white;
+    font-weight: bolder;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 6px;
+}
+
 .boton_solicitar button,
 .btn_solicitud_enviar {
     width: 80%;
