--- a/css/registro.css
+++ b/css/registro.css
@@ -122,18 +122,18 @@ select {
     border: 2px solid #78ed99;
     color: rgb(2, 85, 2);
     border-radius: 6px;
-    height: 5vh;
-    font-size: 2.2vh;
+    height: 9vw;
+    font-size: 4vw;
     padding: 1%;
 }
 
 textarea {
     width: 90%;
-    height: 17vh;
+    height: 17vw;
     border: 2px solid #78ed99;
     color: rgb(2, 85, 2);
     border-radius: 6px;
-    font-size: 1.5vh;
+    font-size: 4vw;
     padding: 1%;
 }
 
@@ -247,7 +247,7 @@ footer {
     label {
         color: green;
         font-weight: bolder;
-        font-size: 1.7vh;
+        font-size: 2.2vw;
     }
     .campos_busqueda div {
         margin: 2%;
@@ -262,9 +262,12 @@ footer {
         border: 2px solid #78ed99;
         color: rgb(2, 85, 2);
         border-radius: 6px;
-        height: 3.2vh;
-        font-size: 1.5vh;
+        height: 4.5vw;
+        font-size: 2vw;
         padding: 1%;
+    }
+    textarea {
+        font-size: 2vw;
     }
     .campos_terminos div {
         padding: 1%;
@@ -343,6 +346,18 @@ footer {
     }
     #ini {
         width: 30%;
+    }
+    #formularios input[type="text"],
+    input[type="date"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="password"],
+    select {
+        font-size: 2.2vh;
+        height: 2.4vw;
+    }
+    textarea {
+        font-size: 2.2vh;
     }
     .cuerpo_form {
         padding: 1%;
