--- a/css/estilosLanding.css
+++ b/css/estilosLanding.css
@@ -585,6 +585,7 @@ footer {
     }
     .contenido_landing {
         margin-top: 2%;
+        width: 48%;
     }
     .contenido_landing p {
         margin-top: 0%;
